working on clour defects