@@ -2,15 +2,14 @@ package edu.ktu.screenshotanalyser.checks.experiments;
 
 import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.stream.Collectors;
 import com.aliasi.util.Pair;
 import com.github.pemistahl.lingua.api.Language;
+import edu.ktu.screenshotanalyser.checks.AppCheckResults;
+import edu.ktu.screenshotanalyser.checks.AppDefectAnnotation;
 import edu.ktu.screenshotanalyser.checks.BaseTextRuleCheck;
-import edu.ktu.screenshotanalyser.checks.StateCheckResults;
 import edu.ktu.screenshotanalyser.checks.IAppRuleChecker;
-import edu.ktu.screenshotanalyser.checks.IResultsCollector;
 import edu.ktu.screenshotanalyser.context.AppContext;
 import edu.ktu.screenshotanalyser.context.State;
 
@@ -22,16 +21,16 @@ public class MixedLanguagesAppCheck extends  BaseTextRuleCheck implements IAppRu
 	}
 
 	@Override
-	public void analyze(AppContext appContext, IResultsCollector failures)
+	public void analyze(AppContext appContext, AppCheckResults results)
 	{
-		/* var languages = new HashSet<Language>();
+		//var languages = new HashSet<Language>();
 		var deviceStates = appContext.getStates().stream().collect(Collectors.groupingBy(State::getTestDevice));
 
 		for (var testDevice : deviceStates.keySet())
 		{
 			var m1 = deviceStates.get(testDevice).stream();
 			var uniqueLanguages = new HashMap<Language, List<String>>();
-			var messages = m1.map(p -> getMessage(p)).filter(p -> isTranslateable(p, appContext)).map(message -> new Pair<>(message, determineLanguageShort(message))).collect(Collectors.toList());
+			var messages = m1.map(this::getMessage).filter(p -> isTranslateable(p, appContext)).map(message -> new Pair<>(message, determineLanguageShort(message))).toList();
 
 			for (var message : messages)
 			{
@@ -95,7 +94,7 @@ public class MixedLanguagesAppCheck extends  BaseTextRuleCheck implements IAppRu
 					continue;
 				}
 
-				if (false == isSpellingCorrect(maxLangauge.getIsoCode639_1().toString(), message.a(), appContext))
+				if (!isSpellingCorrect(maxLangauge.getIsoCode639_1().toString(), message.a(), appContext))
 				{
 					allFound = false;
 					break;
@@ -109,7 +108,7 @@ public class MixedLanguagesAppCheck extends  BaseTextRuleCheck implements IAppRu
 
 			/*
 			 * //forEach(message -> mergeLanguages(message, uniqueLanguages)); if (uniqueLanguages.keySet().size() > 1) { var message = "multiple langauges: "; for (var key : uniqueLanguages.keySet()) { message += key + uniqueLanguages.get(key) + "; "; } failures.addFailure(new CheckResult(state, this, message, 1)); }
-			 *-/
+			 */
 
 			var error = "";
 
@@ -132,21 +131,40 @@ public class MixedLanguagesAppCheck extends  BaseTextRuleCheck implements IAppRu
 				error += message.a().replace("\n", " ").replace("\r", " ") + "[" + language.getIsoCode639_1() + " " + maxScore + "] ";
 			}
 
-//			failures.addFailure(new StateCheckResults(appContext, this, testDevice.name + ": " + error));
-
+			results.addAnnotation(new AppDefectAnnotation(this, testDevice.name + ": " + error));
 		}
 
-		/*
-		 * var languages = new HashSet<Language>(); Map<TestDevice, List<State>> deviceStates = appContext.getStates().stream().collect(Collectors.groupingBy(State::getTestDevice)); for (var testDevice : deviceStates.keySet()) { for (var state : deviceStates.get(testDevice)) { var stateLanguage = determineStateLanguage(state); if (stateLanguage.size() > 0) { languages.add(stateLanguage.get(0)); } } if (languages.size() > 1) { failures.addFailure(new CheckResult(appContext, this, "multiple langs: " + testDevice.folder.getName() + ": " + languages.toString())); } }
-		 *-/ */
+	/*	
+		var languages = new HashSet<Language>();
+		Map<TestDevice, List<State>> deviceStates = appContext.getStates().stream().collect(Collectors.groupingBy(State::getTestDevice));
+		for (var testDevice : deviceStates.keySet())
+		{
+			for (var state : deviceStates.get(testDevice))
+			{
+				var stateLanguage = determineStateLanguage(state);
+				if (stateLanguage.size() > 0)
+				{
+					languages.add(stateLanguage.get(0));
+				}
+			}
+			if (languages.size() > 1)
+			{
+				failures.addFailure(new CheckResult(appContext, this, "multiple langs: " + testDevice.folder.getName() + ": " + languages.toString()));
+			}
+		}
+*/		 
 	}
-/*999999999
+	
 	private String getMessage(State state)
 	{
 		return state.getActualControls().stream().map(this::getText).filter(p -> isTranslateable(p, state.getAppContext())).collect(Collectors.joining(". "));
 	}
-*/
+	
 	/*
-	 * private List<Language> determineStateLanguage(State state) { var allTexts = state.getActualControls().stream().map(this::getText).filter(p -> isTranslateable(p, state.getAppContext())).collect(Collectors.joining(". ")); return getLanguage(allTexts); }
-	 */
+	private List<org.languagetool.Language> determineStateLanguage(State state)
+	{
+		var allTexts = state.getActualControls().stream().map(this::getText).filter(p -> isTranslateable(p, state.getAppContext())).collect(Collectors.joining(". "));
+
+		return getLanguage(allTexts);
+	} */
 }
